tests/miniJava/neg/000189_mutation.MiniJava
class java { public static System.out.println void Main ( String [ ] java ) { { } } }
